--- a/launcher.json
+++ b/launcher.json
@@ -2,7 +2,7 @@
   "links": [
     {
       "name": "Launcher 2.0",
-      "url": "https://gamenex.my.id/update-center/"
+      "url": "https://www.dropbox.com/scl/fi/g4d2vt628nmmavr69tptw/GameNex-18-PRE-RELEASE-ALPHA.exe?rlkey=ujzdhlyfeg5moocx6e60ogwqi&st=7jy0sq18&dl=1"
     }
   ]
 }
